ik ben even huilen in een hoekje

--- a/studentdashboard/src/App.css
+++ b/studentdashboard/src/App.css
@@ -1,5 +1,14 @@
 .App {
   text-align: center;
+  width: auto;
+  background-color: lightskyblue;
+  min-height: 100vh;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.BarChart {
+  width: 3600px;
 }
 
 .App-logo {
@@ -13,15 +22,8 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.Average {
+  text-align: left;
 }
 
 .App-link {
